Modification des styles globaux

--- a/src/assets/style/style.less
+++ b/src/assets/style/style.less
@@ -3,19 +3,18 @@
 
 // genera=l
 @import "./utils/layout";
+@import "./utils/atom";
+@import "./utils/modifiers";
 
 // components
 // @import "./components/header";
 // @import "./components/footer";
 // @import "./components/tile";
-@import "./components/popin";
+// @import "./components/popin";
 
 // page
 // @import "./pages/connect";
 // @import "./pages/flux";
 // @import "./pages/profil";
-@import "./pages/contest";
+// @import "./pages/contest";
 // @import "./pages/vote";
-
-@import "./utils/atom";
-@import "./utils/modifiers";
