--- a/src/assets/style/utils/var.less
+++ b/src/assets/style/utils/var.less
@@ -42,5 +42,6 @@
 @inner-space: .2rem; // general space default!
 @space-h-unit: 30px;
 @maintop-margin: @space-h-unit * 1.8;
+@main-maxwidth: 1250px;
 
 @ico-width: @space * 2;
