--- a/src/components/AppLayout/layer-popin/style.less
+++ b/src/components/AppLayout/layer-popin/style.less
@@ -27,3 +27,13 @@
   background: @bg;
   border-radius: @radius-reg * 2;
 }
+
+.o-popin-ovrflw{
+  max-height: 30vh;
+  overflow: scroll;
+}
+
+.o-popin-caption{
+  background: @bg;
+  width: 90%;
+}
