--- a/src/components/RouteContest/style.less
+++ b/src/components/RouteContest/style.less
@@ -3,3 +3,16 @@
   height: 15vh;
   object-fit: cover;
 }
+
+.o-participation__label{
+  display: inline-block;
+  cursor: pointer;
+  &:extend(.c-grad-yo);
+  &:extend(.brad-4);
+  &:extend(.shadbox-light);
+  &:extend(.pb-05);
+  &:extend(.pt-05);
+  &:extend(.f-sfat);
+  &:extend(.f-bold);
+  &:extend(.f-center);
+}
