--- a/src/assets/style/utils/layout.less
+++ b/src/assets/style/utils/layout.less
@@ -43,11 +43,14 @@ button{
 
 .o-main--search{
   padding-top: @maintop-margin + @space-h-unit;
+  @media (min-width: @desktop){
+    padding-top: @maintop-margin + @space-h-unit * 2;
+  }
 }
 
 .o-main__container{
   @media (min-width: @tab){
-      padding: 0 @space * 6;
+    padding: 0 @space * 6;
   }
 }
 
