--- a/src/components/AppLayout/TheHeader/template.pug
+++ b/src/components/AppLayout/TheHeader/template.pug
@@ -14,5 +14,4 @@ header.o-main-header.p-init.w-100
         svg(v-else viewBox="0 0 304.29 284").o-svgh-ico
           use(xlink:href="#ico-profil")
   
-  div(v-if="$route.name === 'Flux'").o-search.pl-1.pr-1.mt-1
-    input(type="text" placeholder="Rechercher").w-100.p-1.b-0.shadbox-light.brad-4.f-si.no-deco
+  SearchBar
