--- a/src/components/AppLayout/TheHeader/SearchBar/style.less
+++ b/src/components/AppLayout/TheHeader/SearchBar/style.less
@@ -4,7 +4,7 @@
   position: relative;
   max-width: @main-maxwidth;
   margin: @space auto 0;
-  &:after{
+  &::after{
     content: '';
     display: block;
     position: absolute;
@@ -12,6 +12,7 @@
     left: @space * 2;
     right: @space * 2;
     border-bottom: @border-width solid @fg;
+    pointer-events: none;
 
     @media (min-width: @tab){
       max-width: ~"calc(((100% - ((100% * 2) / 100)) / 2) - @{space} * 3)";
