Récupération par filtre des contests contenant un champs texte donné

--- a/src/components/AppLayout/TheHeader/SearchBar/template.pug
+++ b/src/components/AppLayout/TheHeader/SearchBar/template.pug
@@ -1,2 +1,2 @@
 div(v-if="$route.name === 'Flux'").o-search.pl-1.pr-1.mt-1
-  input(type="text" placeholder="Rechercher").o-search__bar.w-100.p-05.pl-1.pr-1.b-0.shadbox-light.brad-4.f-si.no-deco
+  input(@input="search" type="text" placeholder="Rechercher").o-search__bar.w-100.p-05.pl-1.pr-1.b-0.shadbox-light.brad-4.f-si.no-deco
