--- a/src/components/AppLayout/TheHeader/style.less
+++ b/src/components/AppLayout/TheHeader/style.less
@@ -4,6 +4,7 @@
   position: fixed;
   transition: transform .5s ease;
   z-index: 5999;
+  transform: translate3d(0, 0, 0);
   will-change: transform;
 }
 
