Intégration API photo et gestion cache

--- a/src/components/AppLayout/AppContestInfos/template.pug
+++ b/src/components/AppLayout/AppContestInfos/template.pug
@@ -1,6 +1,6 @@
 div.d-row-flex.d-flex-vm
   router-link(:to="'/contest/' + id").no-link
     img(:src="logo").o-profil-pic.p-hcenter-rel.b-reg.d-block.brad-100
-    h2.d-block.m-025.mb-0.f-bold.f-stm {{ brand }}
+    h2.d-block.m-025.mb-0.f-bold.f-stm {{ brandName }}
     span.d-block.pl-05.f-grey {{ desc }}
     span.d-block.f-sxs.f-grey Voir la page du concours
