--- a/src/components/RouteContest/template.pug
+++ b/src/components/RouteContest/template.pug
@@ -1,31 +1,31 @@
 shell-app
-  contest-layout(:contest="contest")
+  contest-layout(v-if="contest && contest.id" :contest="contest")
       
     //- block a changer dans validation et info
     block contestContent
       .pl-2.pr-2  
-        p.p-rel.mt-3.f-center.pl-05.pr-05.sep-bef.sep-aft.f-stl {{ contest.info }}
+        p(v-if="contest").p-rel.mt-3.f-center.pl-05.pr-05.sep-bef.sep-aft.f-stl {{ contest.info }}
       .pl-1.pr-1.pt-2
         ul.d-row-flex.no-list.b-reg.brad-6.pt-1.pb-1
           li.p-hcenter-rel.d-flex-eq.f-light.f-si 
             svg(viewBox="0 0 62.37 62.37").o-tile__ico.o-tile__ico--large
               use(xlink:href="#ico-cible")
-            span {{ contest.target }}
+            span(v-if="contest") {{ contest.target }}
           li.p-hcenter-rel.d-flex-eq.pr-1.pl-1.f-light.f-si 
             svg(viewBox="0 0 64.22 62.67").o-tile__ico.o-tile__ico--large
               use(xlink:href="#ico-gift")
-            span {{ contest.gifts }}
+            span(v-if="contest") {{ contest.gifts }}
                 
           li.p-hcenter-rel.d-flex-eq.f-light.f-si 
             svg(viewBox="0 0 60.09 60.09" ).o-tile__ico.o-tile__ico--large
               use(xlink:href="#ico-clock")
             div
-              div {{ getStartDate }}
-              div {{ getEndDate }}
+              div(v-if="contest") {{ getStartDate }}
+              div(v-if="contest") {{ getEndDate }}
               
       div.d-col-flex.mt-2.pr-4.pl-4
-        a(@click="$store.commit('popinDisplay')" v-if="!contest.participation").f-bold.f-sfat.pt-05.pb-05.f-center.c-grad-yo.shadbox-light.brad-4 Participer
-        router-link(:to="$route.path +'/vote'" v-if="!contest.closed && contest.hasPhoto").no-link.f-center.shadbox-light.pt-1.pb-1.mt-1.brad-4 
+        a(@click="$store.commit('popinDisplay')" v-if="contest && !contest.participation").f-bold.f-sfat.pt-05.pb-05.f-center.c-grad-yo.shadbox-light.brad-4 Participer
+        router-link(:to="$route.path +'/vote'" v-if="contest && !contest.closed && contest.hasPhoto").no-link.f-center.shadbox-light.pt-1.pb-1.mt-1.brad-4 
           svg(viewBox="0 0 42 42").mt-neg025.o-svgh-ico.o-svg-btn.mr-05.va-mid
             use(xlink:href="#ico-vote")
           span Photos
@@ -35,5 +35,5 @@ shell-app
         p(v-html="rules").pt-1.f-grey.f-stl
       
     //- popin de reglement ici
-    layer-popin(v-show="displayedPopin")
+    layer-popin(v-show="displayedPopin" v-if="contest && contest.id")
       validation-rules(:brandName="contest.brandName" :id="contest.id" :logo="contest.logo" :desc="contest.desc" :rules="rules" :ban="contest.ban")
