Différenciation popin photo perso et autre utilisateur

--- a/src/assets/style/utils/layout.less
+++ b/src/assets/style/utils/layout.less
@@ -205,6 +205,19 @@ button{
   // &.o-ico-sprite--bronze{ background-position: 96px 1px; }
 }
 
+.o-ico-sprite--big{
+  @size: 2.5rem;
+  border: 2px solid white;
+  width: @size;
+  height: @size;
+  background-size: auto @size - .35em;
+  border-radius: 0;
+
+  // &.o-ico-sprite--or{ background-position: 0 1px; }
+  // &.o-ico-sprite--argent{ background-position: 48% 1px; }
+  // &.o-ico-sprite--bronze{ background-position: 96px 1px; }
+}
+
 .o-ico-sprite--inline{
   position: relative;
   display: inline-block;
