--- a/src/components/RouteImage/info-popin/template.pug
+++ b/src/components/RouteImage/info-popin/template.pug
@@ -10,4 +10,6 @@ div
   ul.d-col-flex.d-flex-vm.mb-1.no-list
     li.p-1.f-stl.f-reg
       button(v-if="isMyProfile" @click="displayOptin").no-link.f-dgrey.no-deco Supprimer et quitter le concours
-      span(v-else) Concours remporté
+      span(v-else) 
+        span(:class="{'o-ico-sprite--none': Number.isInteger(rank), 'o-ico-sprite--or': rank === 'gold', 'o-ico-sprite--argent': rank === 'silver', 'o-ico-sprite--bronze': rank === 'bronze'}").o-ico-sprite.o-ico-sprite--inline.o-ico-sprite--big.va-mid.mt-neg025
+        span.ml-1.f-st.f-bold Remporté
