--- a/src/components/RouteFlux/TilePodium/template.pug
+++ b/src/components/RouteFlux/TilePodium/template.pug
@@ -1,6 +1,6 @@
 div
   .d-row-flex.d-flex-spacebet.d-flex-vm.p-05.pl-1.pr-1
-    a(href="#").no-link.d-row-flex.d-flex-spacebet.d-flex-vm
+    router-link(:to="'/contest/' + data.id").no-link.d-row-flex.d-flex-spacebet.d-flex-vm
       img(:src="data.logo" alt="logo").o-tile__logo--long.b-1.brad-100
       span.va-mid
         span.pl-1.f-stm.pr-05.f-bold {{ data.brandName }}
