Retrait de la page confidentialité

--- a/src/components/RouteIndex/template.pug
+++ b/src/components/RouteIndex/template.pug
@@ -65,7 +65,7 @@
   footer.i-footer
     a(href="/mentions-legales.html").i-footer__link Mentions Légales
     a(href="/cgu.html").i-footer__link Conditions Générales d’Utilisation
-    a(href="/confidentialite.html").i-footer__link Confidentialité
+    //- a(href="/confidentialite.html").i-footer__link Confidentialité
     a(href="/donnees-personnelles.html").i-footer__link Données Personnelles
   
   
