--- a/src/components/RouteUser/UserSettingsRoutes/template.pug
+++ b/src/components/RouteUser/UserSettingsRoutes/template.pug
@@ -6,8 +6,8 @@ div
   ul.d-col-flex.d-flex-vm.mt-2.mb-2.no-list
     li.p-1.f-stl.f-reg
       a(@click="logout").no-link Deconnexion
-    li.p-1.f-stl.f-reg
-      router-link(to="/user/settings/confidential").no-link Confidentialité
+    //- li.p-1.f-stl.f-reg
+    //-   router-link(to="/user/settings/confidential").no-link Confidentialité
     li.p-1.f-stl.f-reg
       router-link(to="/user/settings/cgu").no-link Condition d'utilisation
     li.p-1.f-stl.f-reg
