Ajout post pour contacter un admin via formulaire de contact

--- a/src/components/RouteUser/UserSettings/template.pug
+++ b/src/components/RouteUser/UserSettings/template.pug
@@ -16,7 +16,7 @@ shell-app
         input(type="text" v-model="contactObjet").w-100.brad-4.b-reg.p-1.pl-5.no-deco
         
       textarea(type="text" v-model="contactMessage" placeholder="Votre message").o-setting__textarea.w-100.brad-4.b-reg.mt-2.p-1.p-1.b-noresize.no-deco
-      a.d-block.f-bold.f-stl.pt-05.pb-05.pl-2.pr-2.mt-2.f-center.c-grad-yo.shadbox-light.brad-4.no-link envoyer
+      a(@click="sendMessage").d-block.f-bold.f-stl.pt-05.pb-05.pl-2.pr-2.mt-2.f-center.c-grad-yo.shadbox-light.brad-4.no-link envoyer
         
       
   
