Renforcement sécurité chargement long sur la popin de partage

--- a/src/components/RouteVote/template.pug
+++ b/src/components/RouteVote/template.pug
@@ -10,7 +10,7 @@ shell-app
     .o-width-container.p-rel.d-inblock
       .d-row-flex.d-flex-spacebet.pl-1.pr-1
         span.f-light n°{{ index + 1}}
-        a(@click="displayPopin(0)").no-link
+        a(v-if="$store.state.callcontest.photos.length > 0" @click="displayPopin(0)").no-link
           span.o-more
       img(:src="displayImage").o-plain-img
     
