Implémentation du delete photo perso

--- a/src/components/RoutePhoto/InfoPopin/template.pug
+++ b/src/components/RoutePhoto/InfoPopin/template.pug
@@ -4,7 +4,7 @@ div
       use(xlink:href="#ico-arrow")
         
   .d-row-flex.f-center.d-flex-vm.d-flex-hm.mb-1.mt-2   
-    AppContestInfos(:logo="logo" :brandName="brandName" :desc="desc" :id="id"  )
+    AppContestInfos(:logo="photoData.contestLogo" :brandName="photoData.contestBrandName" :desc="photoData.contestDesc" :id="photoData.idContest"  )
   hr.o-sep
               
   ul.d-col-flex.d-flex-vm.mb-1.no-list
