--- a/src/components/RouteIndex/template.pug
+++ b/src/components/RouteIndex/template.pug
@@ -63,9 +63,9 @@
       img(srcset="@/assets/img/index/page4@2x.png 2x, @/assets/img/index/page4@1x.png 1x" src="@/assets/img/index/page4@1x.png" alt="Remportez les prix spécialement préparés par nos organisateurs partenaires" width="700").i-img
 
   footer.i-footer
-    a(href="/mentions-legales.html").i-footer__link Mentions Légales
-    a(href="/cgu.html").i-footer__link Conditions Générales d’Utilisation
-    //- a(href="/confidentialite.html").i-footer__link Confidentialité
-    a(href="/donnees-personnelles.html").i-footer__link Données Personnelles
+    a(href="/legal/MENTIONS_LEGALES_HEPIC.pdf" target="_blank").i-footer__link Mentions Légales
+    a(href="/legal/CGU_HEPIC.pdf" target="_blank").i-footer__link Conditions Générales d’Utilisation
+    //- a(href="/confidentialite.html" target="_blank").i-footer__link Confidentialité
+    a(href="/legal/RGPD_HEPIC.pdf" target="_blank").i-footer__link Données Personnelles
   
   
