--- a/src/components/RouteUser/UserSettings/style.less
+++ b/src/components/RouteUser/UserSettings/style.less
@@ -2,7 +2,8 @@
 
 .o-setting__content{
   width: 100%;
-  min-height: 70vh;
+  height: 70vh;
+  overflow-y: scroll;
   border: solid @border-width @l-grey;
   border-radius: @radius-reg * 2;
   overflow-y: scroll;
