--- a/src/assets/style/style.less
+++ b/src/assets/style/style.less
@@ -1,20 +1,7 @@
 @import "./utils/reboot";
 @import "./utils/var";
 
-// genera=l
+// general
 @import "./utils/layout";
 @import "./utils/atom";
 @import "./utils/modifiers";
-
-// components
-// @import "./components/header";
-// @import "./components/footer";
-// @import "./components/tile";
-// @import "./components/popin";
-
-// page
-// @import "./pages/connect";
-// @import "./pages/flux";
-// @import "./pages/profil";
-// @import "./pages/contest";
-// @import "./pages/vote";
