--- a/src/components/AppLayout/TheHeader/template.pug
+++ b/src/components/AppLayout/TheHeader/template.pug
@@ -7,7 +7,7 @@ header.o-main-header.p-init.w-100
             
       router-link(:to="'/user/' + userId", title="Profil").p-rel.o-inlinebox.h-100
         //- zone de notif --
-        span.o-notif.p-abs.brad-100
+        span(v-if="hasNotification").o-notif.p-abs.brad-100
         //- fin de zone de notif --
         div(v-if="userPicture")
           img(:src="userPicture").o-profilepic
