Affichage contenu d'une notification sur le profil

--- a/src/components/RouteUser/UserNotification/template.pug
+++ b/src/components/RouteUser/UserNotification/template.pug
@@ -1,1 +1,1 @@
-p.p-rel.mb-05.f-si.f-reg.c-grad-yo Concours Imaginarium Festival remporté !
+p(v-if="notification").p-rel.mb-05.f-si.f-reg.c-grad-yo {{ notification.msg }}
