--- a/src/components/RouteUser/UserNotification/template.pug
+++ b/src/components/RouteUser/UserNotification/template.pug
@@ -1,1 +1,2 @@
-p(v-if="notification").p-rel.mb-05.f-si.f-reg.c-grad-yo {{ notification.msg }}
+span(v-if="notifications").p-rel.mb-05
+  p(v-for="notif in notifications").mb-1.f-si.f-reg.c-grad-yo {{ notif.message }}
