Récupération des données persos

--- a/src/assets/style/utils/atom.less
+++ b/src/assets/style/utils/atom.less
@@ -269,6 +269,7 @@
 .shadbox-light{
   box-shadow: 0 0 4px rgba(0,0,0, .35);
 }
+.ws-pwrap{ white-space: pre-wrap; }
 
 // ----- TRANSFORM -----
 //
