Mise en forme du HTML parsé dans les règlements dde concours

--- a/src/components/RouteContest/ContestRulesValidation/template.pug
+++ b/src/components/RouteContest/ContestRulesValidation/template.pug
@@ -9,7 +9,7 @@ div
         
   .o-popin-ovrflw.pl-2.pr-2.mt-2
     h3.p-rel.pt-2.f-stl.f-reg Règlement complet
-    p(v-html="rules").pt-1.f-grey 
+    p(v-html="rules").pt-1.f-grey.ws-pwrap
 
   .f-center.f-bold
     | ...
