Mise en forme LESS

--- a/src/assets/style/utils/atom.less
+++ b/src/assets/style/utils/atom.less
@@ -13,7 +13,7 @@
 .no-deco{
   outline: none;
   // box-shadow: none;
-  &:focus{
+  &:focus{ 
     outline: none;
     // box-shadow: none;
   }
@@ -266,9 +266,7 @@
 
 
 
-.shadbox-light{
-  box-shadow: 0 0 4px rgba(0,0,0, .35);
-}
+.shadbox-light{ box-shadow: 0 0 4px rgba(0,0,0, .35); }
 .ws-pwrap{ white-space: pre-wrap; }
 
 // ----- TRANSFORM -----
