Mise en place du sprite de ranking

--- a/src/components/RoutePhoto/template.pug
+++ b/src/components/RoutePhoto/template.pug
@@ -12,7 +12,7 @@ shell-app
               img(:src="profile.picture" alt="logo").o-tile__logo--long.b-1.brad-100.mt-neg025
               span.va-mid
                 span.pl-1.f-stm.pr-1.f-grey {{ profile.name }}
-                div(:class="{'o-ico-sprite--none': Number.isInteger(media.rank), 'o-ico-sprite--or': media.rank === 'gold', 'o-ico-sprite--argent': media.rank === 'silver', 'o-ico-sprite--bronze': media.rank === 'bronze'}").o-ico-sprite.o-ico-sprite--inline.va-mid.mt-neg025.f-center    
+                div(:class="{'o-ico-sprite o-ico-sprite--or': media.rank === 1, 'o-ico-sprite o-ico-sprite--argent': media.rank === 2, 'o-ico-sprite o-ico-sprite--bronze': media.rank === 3}").o-ico-sprite--inline.va-mid.mt-neg025.f-center    
             a(@click="displayPopin" v-if="contest && contest.id").no-link
               span.o-more
                 
