--- a/src/components/RouteVote/template.pug
+++ b/src/components/RouteVote/template.pug
@@ -18,7 +18,7 @@ shell-app
       a(@click="prevImg").h-100.w-30.f-center
         svg(v-show="index !== indexMin" viewBox="0 0 132.98 257").o-svg-btn.va-mid.h-100.w-30
           use(xlink:href="#ico-leftArrow")
-      a(v-if="contest && !contest.i_voted" @click="displayPopin(1)").brad-100.h-100.w-30.f-center
+      a(v-if="!voted" @click="displayPopin(1)").brad-100.h-100.w-30.f-center
         svg(viewBox="0 0 42 42").o-votefor.h-100.p-05.brad-100.b-regFg
           use(xlink:href="#ico-vote")
       a(@click="nextImg").h-100.w-30.f-center
